fix: adjust spacing for edge cases

--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -135,6 +135,9 @@ blockquote
 		border-left: 6px solid $c_g_medium
 		border-radius: 3px
 
+	> :first-child
+		margin-top: 0
+
 	> :last-child
 		margin-bottom: 0
 		border: none
