--- a/sass/main-v2.sass
+++ b/sass/main-v2.sass
@@ -128,7 +128,7 @@
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)
 
 	p
-		margin-bottom: $p_small
+		margin: 0 0 $p_small
 
 		&:last-child
 			margin-bottom: 0
